# geron_pearl

./: .gitignore  AUTHENTICATION_SETUP_COMPLETE.md  BACKEND_OPTIMIZATION_PLAN.md  BMAD_PROJECT_CONTEXT.md  CLAUDE.md  COMMENT_SIMPLIFICATION_TODO.md  CROSS_BROWSER_WEBSOCKET_DEBUG.md  CRUD_OPERATION_ANALYSIS_SUMMARY.md  DOCKER_DEPLOYMENT_GUIDE.md  FEATURE_COMMENT_UX_TODO.md  FILTERING_IMPROVEMENTS.md  FRONTEND_OPTIMIZATION_PLAN.md  OPTIMIZATION_MASTER_PLAN.md  PACKAGES_FRONTEND.md  RBAC_IMPLEMENTATION.md  README.md  REFACTOR.md  REPORTING_EFFORT_TRACKER_DEV_GUIDE.md  REPORTING_EFFORT_TRACKER_QC_RESPONSE.md  REPORTING_EFFORT_TRACKER_TODO.md  Reporting_effort_tracker_qc_findings.md  Role_base_2.md  Role_based.md  TODO.md  UNIVERSAL_CRUD_UPDATE_PLAN.md  WEBSOCKET_README.md  WORKSPACE_CLEANUP_PLAN.md  python_only_tracker.md  start_all.bat  start_backend.bat  start_frontend.bat  start_react_frontend.bat  stop_all.bat  stop_backend.bat  stop_frontend.bat  stop_react_frontend.bat  tatus  template_env.txt  test_backend_change.py  test_packages_frontend.sh  (+5 more)
backend/: CASCADE_DELETE_MIGRATION_PLAN.md  CLAUDE.md  DUPLICATE_STUDY_PREVENTION_SUMMARY.md  FK_CASCADE_ANALYSIS.md  Makefile  README.md  TRACKER_DELETE_ENDPOINT_TESTING_RESULTS.md  _check_enums.py  alembic.ini  analyze_orphaned_records.py  check_item_42.py  check_tracker_42.py  clean_duplicate_studies.py  clear_reporting_effort_items.py  create_test_tracker_data.py  debug_apis.py  debug_create_item.py  debug_crud.py  debug_enum_serialization.py  debug_frontend_path.py  debug_schema.py  debug_specific_items.py  debug_text_element.py  debug_tracker_creation.py  execute_cascade_migration.py  find_duplicate_studies.py  investigate_tracker_orphans.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_users.py  run.py  test_actual_creation.py  test_audit_logging.sh  test_bulk_operations.sh  test_bulk_tlf.json  test_cascade_deletion.py  test_comments.py  test_database_releases_crud.sh  test_duplicate_prevention.py  (+12 more)
backend/app/: __init__.py  main.py  utils.py
backend/backups/: pearl_backup_20250814_044940.sql.json  pearl_backup_20250814_045022.sql.json  pearl_backup_20250814_045325.sql  pearl_backup_20250814_045325.sql.json  (+3 more)
(+373 files in other folders)
